Fix csv download errors for multiple includes changed csv download function to use a blob. previously used url, but selecting multiple includes would make the url too long to download.

--- a/css/main.css
+++ b/css/main.css
@@ -851,7 +851,8 @@ Map
     z-index: 1;
 }
     #map-wrap.half-height {
-        height: 25vh;
+        height: 20vh;
+        min-height: 200px;
     }
 
 #map {
